ckanext/open_alberta/fanstatic/css/ab-opengov.css
/*
 * IDDP/OGP css tweeks.
 * The base CSS is alberta.ca.css
 */
/* Bootstrap v3.x folds the navigation at viewport width <= 768px, so desktop users see phone interface in many cases.
   This helps to override that to a custom value without rebuilding bootstrap. */
#alberta-ca.IDDP {
  overflow-x: hidden;
  background: #36424a;
  font-family: lato, sans-serif;
  font-size: 1.6em;
  /* Bootstrap burgerizes the menu at 768px - move that to 40em as we can't customize BS itself */
  /* Helpers */
  /* tempoary fix for styling issues caused by alberta.ca css changes */ }
  #alberta-ca.IDDP .system-notice {
    padding: 15px;
    background: #c0d4e8;
    background-image: linear-gradient(to bottom, #c0d4e8 1%, #88b8e8 54%, #358dea 100%);
    color: #fff;
    text-align: center; }
    #alberta-ca.IDDP .system-notice i.fa-info-circle {
      font-size: 18px;
      margin-right: 5px; }
    #alberta-ca.IDDP .system-notice i.fa-external-link {
      font-size: 75%; }
    #alberta-ca.IDDP .system-notice a {
      color: yellow; }
  #alberta-ca.IDDP .page-top-bg {
    background: #fff;
    padding-bottom: 30px; }
  #alberta-ca.IDDP .page-main-bg {
    background-color: #fff;
    padding-top: 20px;
    padding-bottom: 20px; }
  #alberta-ca.IDDP [role=main].gray .page-main-bg {
    background-color: #d1d4d3; }
  #alberta-ca.IDDP table td {
    border: 0px; }
  #alberta-ca.IDDP .form-horizontal .form-group {
    margin-left: 0;
    margin-right: 0; }
  #alberta-ca.IDDP .list-group > .clearfix {
    list-style: none; }
  #alberta-ca.IDDP .badge a.remove {
    color: white;
    margin-left: 5px; }
  #alberta-ca.IDDP .wrapper-main {
    padding: 0 15px; }
  #alberta-ca.IDDP #content.package-read .page-header {
    margin: 0;
    border: none; }
  #alberta-ca.IDDP #content.package-read .nav-tabs {
    border: none; }
  #alberta-ca.IDDP #content.package-read .primary article {
    padding: 0; }
  #alberta-ca.IDDP #content.package-read tr:nth-child(even) {
    background: #ddd; }
  #alberta-ca.IDDP #content.package-read td {
    padding: 3px 10px;
    border: dotted 1px #a0a0a0; }
  #alberta-ca.IDDP #content.package-read tr td:first-child {
    text-transform: uppercase; }
  #alberta-ca.IDDP #content.package-read .page-footer {
    margin: 20px auto;
    overflow: auto; }
    #alberta-ca.IDDP #content.package-read .page-footer a {
      margin-right: 30px; }
    #alberta-ca.IDDP #content.package-read .page-footer a:last-child {
      /* Download Metadata button */ }
      @media screen and (min-width: 25em) {
        #alberta-ca.IDDP #content.package-read .page-footer a:last-child {
          float: right; } }
  #alberta-ca.IDDP .logo a {
    background: url(/img/AlbertaLogoWhiteV.svg) no-repeat center center;
    background-size: 120px 51px; }
  #alberta-ca.IDDP .page_primary_action {
    margin-bottom: 15px; }
  #alberta-ca.IDDP .search-giant .btn {
    background: #555;
    border-radius: 0;
    border: 1px solid #555; }
  #alberta-ca.IDDP #content {
    padding-top: 0;
    padding-left: 30px;
    padding-right: 30px; }
    #alberta-ca.IDDP #content > .row {
      background: #fff;
      padding-top: 0; }
    #alberta-ca.IDDP #content .primary {
      float: right;
      padding-top: 10px; }
      #alberta-ca.IDDP #content .primary > article {
        padding: 0; }
        #alberta-ca.IDDP #content .primary > article .topics {
          margin: 0 -15px 20px; }
    #alberta-ca.IDDP #content.no-sidebar .primary {
      width: 100%;
      float: none; }
    #alberta-ca.IDDP #content.no-sidebar .secondary {
      display: none; }
  #alberta-ca.IDDP .secondary {
    float: left;
    padding: 0; }
    @media only screen and (max-width: 768px) {
      #alberta-ca.IDDP .secondary {
        display: none; } }
    #alberta-ca.IDDP .secondary aside {
      border: dotted 1px #ccc;
      padding: 15px;
      /* TODO:
                &.filter-results {
                }
                */ }
      #alberta-ca.IDDP .secondary aside section *:first-child {
        margin-top: 0; }
      #alberta-ca.IDDP .secondary aside section *:last-child {
        margin-bottom: 0; }
      #alberta-ca.IDDP .secondary aside h3 {
        color: #fff;
        background: #606060;
        font-size: 1.2em;
        margin: 0;
        padding: 5px 10px; }
      #alberta-ca.IDDP .secondary aside h4 {
        color: #000;
        background: #ccc;
        font-size: 0.9em;
        padding: 5px 10px;
        margin: 0; }
        #alberta-ca.IDDP .secondary aside h4.suggest {
          text-align: center; }
        #alberta-ca.IDDP .secondary aside h4 i.fa {
          float: right;
          margin-left: 5px;
          color: #808080;
          cursor: pointer;
          font-size: 1.1em; }
          #alberta-ca.IDDP .secondary aside h4 i.fa:hover {
            color: #000; }
      #alberta-ca.IDDP .secondary aside li.nav-item {
        font-size: 0.9em;
        margin: 0;
        padding: 5px 10px;
        border-bottom: dotted 1px #ccc; }
        #alberta-ca.IDDP .secondary aside li.nav-item a {
          margin: -5px -10px;
          padding: 5px 5px 5px 10px; }
      #alberta-ca.IDDP .secondary aside p.module-footer {
        text-align: center;
        font-size: 0.8em;
        background: #ddd;
        padding: 5px; }
        #alberta-ca.IDDP .secondary aside p.module-footer a.show-less {
          display: none; }
    #alberta-ca.IDDP .secondary.no-padding {
      padding: 0; }
  #alberta-ca.IDDP.no-sidebar .secondary {
    display: none; }
  #alberta-ca.IDDP #content.catalogue input {
    border: solid 1px auto; }
  #alberta-ca.IDDP #content.catalogue .secondary {
    padding: 5px; }
    #alberta-ca.IDDP #content.catalogue .secondary aside {
      padding: 0; }
    #alberta-ca.IDDP #content.catalogue .secondary h3 .fa-close {
      display: none; }
  #alberta-ca.IDDP .account-masthead {
    background-color: black;
    margin: 0; }
    #alberta-ca.IDDP .account-masthead a {
      color: #A0A0A0;
      text-decoration: none; }
/* ... */

